--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script type="text/javascript">
             function setBrowserFrameSource(){
                 var browserFrame = document.getElementById("browser");
-                browserFrame.src= "http://" + document.getElementById("txtUrl").value;
+                browserFrame.src= document.getElementById("txtUrl").value;
             }
         </script>
         </head>
